@@ -1,3 +1,4 @@
 SUBDIRS=\
+bugs/array \
 php \
 ruby
